<resources>
    <string name="app_name">Hotel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="room">Rooms</string>
    <string name="menu_gallery">Gallery</string>
    <string name="dinning">Dinning</string>
    <string name="location">Location</string>
    <string name="contact">Contact US</string>
    <string name="about">About</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>