<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.hotel.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/room"
        android:name="com.example.hotel.ui.room.room"
        android:label="@string/room"
        tools:layout="@layout/room" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hotel.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/dinning"
        android:name="com.example.hotel.ui.slideshow.SlideshowFragment"
        android:label="@string/dinning"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loaction"
        android:name="com.example.hotel.ui.slideshow.SlideshowFragment"
        android:label="@string/location"
        tools:layout="@layout/location" />

    <fragment
        android:id="@+id/contact"
        android:name="com.example.hotel.ui.slideshow.SlideshowFragment"
        android:label="@string/contact"
        tools:layout="@layout/contact" />
    <fragment
        android:id="@+id/about"
        android:name="com.example.hotel.ui.slideshow.SlideshowFragment"
        android:label="@string/about"
        tools:layout="@layout/about" />

</navigation>